--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -1,7 +1,23 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">{{title}}</h4>
+     
+     
+<div class="col d-flex justify-content-between align-items-center">
+
+  <h4 class="page-title">{{title}}</h4>
+
+      <div class="back-icon" style="margin-right: 10px;">
+
+        <a href="javascript:void(0);" onclick="history.back();">
+
+          <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+
+        </a>
+
+      </div>
+
+    </div>
     </div>
   </div>
   <div class="row p-2">
@@ -96,7 +112,7 @@
 
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label"
-              >Department </label>
+              >Department <span style="color: red; font-weight: bolder;">*</span> </label>
             <div class="col-sm-10">
               <p-multiSelect
                 [options]="departs"
