--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -1,22 +1,33 @@
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
-           
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Document template configuration</h4>
-                <div class="d-flex page-title-actions">
-                  
-                 <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search Templates" />
-                
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddTemplate()" *ngIf="access">New</button>
+
+                <div class="back-icon" style="margin-right: 10px;">
+                    <a href="javascript:void(0);" onclick="history.back();">
+                        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                    </a>
                 </div>
-              </div>
+                
+                <div class="d-flex page-title-actions">
+                    <div class="input-group custom-input-group">
+                        <!-- Magnifying glass icon -->
+                        <span class="input-group-text custom-input-group-text">
+                            <i class="fas fa-search custom-search-icon"></i>
+                        </span>
+                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                    </div>
+                      
+                    <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddTemplate()" *ngIf="access">New</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table #templatesTable [value]="types"
+                <p-table #templatesTable [value]="types"
             [globalFilterFields]="['Templatename', 'Uniquecode', 'description','CreatedBy', 'status']"
              tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
@@ -45,7 +56,7 @@
                         <td>{{template?.CreatedBy}}</td>
                         <td>{{template?.CreatedDate | date }}</td>
                         <td>
-                            <a href="javascript:void(0)" (click)="previewtemplate(template1,template)">Preview</a>
+                            <a href="javascript:void(0)" (click)="previewtemplate(template,template)">Preview</a>
                         </td> 
                         <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span></td>
                         <td class="text-center" *ngIf="access && !template?.IsParent"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
@@ -64,22 +75,86 @@
                     </tr>
                 </ng-template>
             </p-table>
+            </div>
         </div>
     </div>
-    </div>
-</div>  
+</div>
 
-<ng-template #template1>
-    <div class="modal-header">
-      <h4 class="modal-title pull-left">Preview</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
-        <span aria-hidden="true">×</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
-    </div>
-  </ng-template>
+
+
+
+<style>
+
+    /* Styles for .custom-input-group */
+
+    .custom-input-group {
+
+        background-color: white;
+
+        display: flex;
+
+        align-items: center;
+
+        border: 1px solid #ccc;
+
+        border-radius: 5px;
+
+    }
+
+    .custom-input-group-text {
+
+            background: white;
+
+            border: none;
+
+            padding: 0;
+
+            vertical-align: middle;
+
+        }
+
+ 
+
+        .custom-search-icon {
+
+            font-size: 14px;
+
+            margin-right: 5px;
+
+            margin-left: 9px;
+
+            color: #555;
+
+        }
+
+ 
+
+        .custom-input {
+
+            border: none;
+
+            padding: 5px;
+
+            vertical-align: middle;
+
+            background-color: white;
+
+            box-shadow: none;
+
+        }
+
+    </style>
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
