--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -1,78 +1,161 @@
+
+
+
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
-           
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Work flow configuration</h4>
-                
+
                 <div class="back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
                         <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
                     </a>
                 </div>
                 
-
                 <div class="d-flex page-title-actions">
-                    
-                    <div class="input-group">
-                        <input type="text" class="form-control" pInputText type="text" (input)="workflowTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search Workflows" maxlength="50"/>
-                        <span class="input-group-text"><i class="fas fa-search"></i></span>
-                      </div>
-                                    
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddWorkflow()" *ngIf="access">New</button>
+                    <div class="input-group custom-input-group">
+                        <!-- Magnifying glass icon -->
+                        <span class="input-group-text custom-input-group-text">
+                            <i class="fas fa-search custom-search-icon"></i>
+                        </span>
+                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="workflowTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                    </div>
+                      
+                    <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddWorkflow()" *ngIf="access">New</button>
                 </div>
-              </div>
+            </div>
         </div>
     </div>
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table #workflowTable [value]="types"
-            [globalFilterFields]="['workflowName','documentstage', 'documenttype', 'department','CreatedBy', 'Status','workflowName']"
-             tableStyleClass="table table-striped" [rows]="itemsPerPage"
-            [paginator]="true" [totalRecords]="types.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" >
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th>S.no</th>
-                        <th pSortableColumn="workflowName" style="width:20%">Workflow<p-sortIcon field="workflowName"></p-sortIcon></th>
-                        <th pSortableColumn="documentstage" style="width:20%">Document Stage<p-sortIcon field="documentstage"></p-sortIcon></th>
-                        <th pSortableColumn="documenttype" style="width:10%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
-                        <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
-                        <th pSortableColumn="CreatedBy" style="width:20%">Registered by<p-sortIcon field="CreatedBy"></p-sortIcon></th>
-                        <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>
-                        <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
-                        <th style="width:80px">Modify</th>
-
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-docItem let-i="rowIndex">
-                    <tr>  
-                        <td>{{ i + 1 }}</td>  
-                        <td>{{docItem.workflowName}}</td>
-                        <td>{{docItem.documentstage}}</td>
-                        <td class="text-nowrap">{{docItem.documenttype}}</td>
-                        <td>{{docItem.departments}}</td>
-                        <td>{{docItem.CreatedBy}}</td>
-                        <td>{{docItem.CreatedDate | date}}</td>
-                        <td><span class="status" [ngClass]="{'status-completed':true}">{{docItem?.Status}} </span></td>
-                        <td class="text-center"  *ngIf="access && !docItem?.IsParent"><i class="bi bi-pencil" (click)="editdoc(docItem)"></i></td>
-                        <td class="text-center" *ngIf="!access">
-                            <i class="bi bi-lock bi-lg" 
-                            [ngClass]="{'text-primary':true}"
-                            title="No Permissions">
-                            </i>
-                        </td>
-                        <td class="text-center" *ngIf="access && docItem?.IsParent">
-                            <i class="bi bi-lock bi-lg" 
-                            [ngClass]="{'text-primary':true}"
-                            title="{{ docItem?.IsParent ? 'Locked' : 'Unlocked' }}">
-                            </i>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
+                <p-table #workflowTable [value]="types"
+                [globalFilterFields]="['workflowName','documentstage', 'documenttype', 'department','CreatedBy', 'Status','workflowName']"
+                 tableStyleClass="table table-striped" [rows]="itemsPerPage"
+                [paginator]="true" [totalRecords]="types.length"
+                [rowsPerPageOptions]="rowsPerPageOptions" >
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>S.no</th>
+                            <th pSortableColumn="workflowName" style="width:20%">Workflow<p-sortIcon field="workflowName"></p-sortIcon></th>
+                            <th pSortableColumn="documentstage" style="width:20%">Document Stage<p-sortIcon field="documentstage"></p-sortIcon></th>
+                            <th pSortableColumn="documenttype" style="width:10%">Document Type <p-sortIcon field="documenttype"></p-sortIcon></th>
+                            <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
+                            <th pSortableColumn="CreatedBy" style="width:20%">Registered by<p-sortIcon field="CreatedBy"></p-sortIcon></th>
+                            <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>
+                            <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
+                            <th style="width:80px">Modify</th>
+    
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-docItem let-i="rowIndex">
+                        <tr>  
+                            <td>{{ i + 1 }}</td>  
+                            <td>{{docItem.workflowName}}</td>
+                            <td>{{docItem.documentstage}}</td>
+                            <td class="text-nowrap">{{docItem.documenttype}}</td>
+                            <td>{{docItem.departments}}</td>
+                            <td>{{docItem.CreatedBy}}</td>
+                            <td>{{docItem.CreatedDate | date}}</td>
+                            <td><span class="status" [ngClass]="{'status-completed':true}">{{docItem?.Status}} </span></td>
+                            <td class="text-center"  *ngIf="access && !docItem?.IsParent"><i class="bi bi-pencil" (click)="editdoc(docItem)"></i></td>
+                            <td class="text-center" *ngIf="!access">
+                                <i class="bi bi-lock bi-lg" 
+                                [ngClass]="{'text-primary':true}"
+                                title="No Permissions">
+                                </i>
+                            </td>
+                            <td class="text-center" *ngIf="access && docItem?.IsParent">
+                                <i class="bi bi-lock bi-lg" 
+                                [ngClass]="{'text-primary':true}"
+                                title="{{ docItem?.IsParent ? 'Locked' : 'Unlocked' }}">
+                                </i>
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
         </div>
     </div>
-    </div>
-</div>  
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<style>
+
+    /* Styles for .custom-input-group */
+
+    .custom-input-group {
+
+        background-color: white;
+
+        display: flex;
+
+        align-items: center;
+
+        border: 1px solid #ccc;
+
+        border-radius: 5px;
+
+    }
+
+    .custom-input-group-text {
+
+            background: white;
+
+            border: none;
+
+            padding: 0;
+
+            vertical-align: middle;
+
+        }
+
+ 
+
+        .custom-search-icon {
+
+            font-size: 14px;
+
+            margin-right: 5px;
+
+            margin-left: 9px;
+
+            color: #555;
+
+        }
+
+ 
+
+        .custom-input {
+
+            border: none;
+
+            padding: 5px;
+
+            vertical-align: middle;
+
+            background-color: white;
+
+            box-shadow: none;
+
+        }
+
+    </style>
+
+ 
