--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -60,7 +60,7 @@
           </div>
           </div>
           <div class="form-group row">
-            <label for="Comments" class="col-sm-2 col-form-label">Comments <span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="Comments" class="col-sm-2 col-form-label">Comments </label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="Comments"
@@ -68,12 +68,10 @@
                         rows="3"
                         placeholder="Comments please"
                         [(ngModel)]="newdept.Comments" [disabled]="viewMode"
-                        required
+                        
            #CommentsInput="ngModel"></textarea>
            <!-- Show validation error message -->
-    <div *ngIf="CommentsInput.invalid && (CommentsInput.dirty || CommentsInput.touched)" class="text-danger">
-      Comments is required.
-            </div>
+   
             </div>
           </div>
           
