--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -1,15 +1,7 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-     <div class="col d-flex justify-content-between align-items-center">
-    <h4 class="page-title">{{title}}</h4>
-        <div class="back-icon" style="margin-right: 10px;">
-       <a href="javascript:void(0);" onclick="history.back();">
-        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-          </a>
-   </div>
-  
-      </div>
+      <h4 class="page-title">{{title}}</h4>
     </div>
   </div>
   <div class="row p-2">
@@ -47,7 +39,7 @@
                      class="form-control"
                      id="prefix"
                      name="prefix"
-                     pattern="^[a-zA-Z\s]*$"
+                     pattern="^[a-zA-Z0-9\s]*$"
                      placeholder="Enter Prefix Name"
                      [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode" maxlength="8"
                      required
@@ -71,24 +63,54 @@
                       </textarea>                      
             </div>
           </div> -->
-          <div class="form-group row">
+         
+          <div class="form-group row" style="min-height: 38px;">
             <label for="department" class="col-sm-2 col-form-label">Assign to Department <span style="color: red; font-weight: bolder;">*</span></label>
-            <div class="col-sm-10">
+            <div class="col-sm-10"  >
               <div>
-                <p-multiSelect [options]="departments" class="custom-ms" [(ngModel)]="selectedDepartments" [filter]="true" defaultLabel="Select a Department"
-                               name="department" id="department" display="chip" optionLabel="DepartmentName" optionValue="DepartmentName" [resetFilterOnHide]="true"
-                               #departmentInput="ngModel" [required]="true"  [disabled]="viewMode">
+                <p-multiSelect #departmentDropdown [options]="departments" class="custom-ms" [(ngModel)]="selectedDepartments" [filter]="true"
+                               defaultLabel="Select a Department"  name="department" id="department" display="chip"
+                               optionLabel="DepartmentName" optionValue="DepartmentName" [resetFilterOnHide]="true"
+                               #departmentInput="ngModel" [required]="true" [disabled]="viewMode"
+                               [ngStyle]="{'max-height.px': 500, 'overflow-y': 'auto', 'width': '100%'}"> 
+                  <ng-template let-department pTemplate="selectedItems"  >
+                    <div *ngIf="selectedDepartments.length > 0" >
+                      <!-- <div  *ngFor="let item of selectedDepartments" class="selected-item" style="margin-right: 5px; margin-bottom: 5px; padding: 5px; background-color: #f2f2f2; border-radius: 3px;">
+                        {{ selectedDepartments[0] }},{{selectedDepartments.length}} <span (click)="removeDepartment(item, $event)" style="cursor: pointer;">&#10005;</span>
+          
+                      </div> -->
+                      <span *ngIf="selectedDepartments.length>1">{{ selectedDepartments[0] }},+{{selectedDepartments.length-1}}</span>
+                      <span  *ngIf="selectedDepartments.length==1">{{ selectedDepartments[0] }}</span>
+                    </div>
+                    <div *ngIf="selectedDepartments.length > 50 && !showAllDepartments">
+                      <div class="view-more" (click)="showAllDepartments = true" style="cursor: pointer; color: blue; margin-top: 5px;">
+                        View More...
+                      </div>
+                    </div>
+                    <div *ngIf="showAllDepartments">
+                      <div *ngFor="let item of selectedDepartments" class="selected-item" style="margin-right: 5px; margin-bottom: 5px; padding: 5px; background-color: #f2f2f2; border-radius: 3px;">
+                        {{ item }} <span (click)="removeDepartment(item, $event)" style="cursor: pointer;">&#10005;</span>
+          
+                      </div>
+                      <div *ngIf="selectedDepartments.length > 5">
+                        <div class="view-more" (click)="showAllDepartments = false" style="cursor: pointer; color: blue; margin-top: 5px;">
+                          View Less...
+                        </div>
+                      </div>
+                    </div>
+                  </ng-template>
                 </p-multiSelect>
                 <div *ngIf="departmentInput.invalid && (departmentInput.dirty || departmentInput.touched)" class="text-danger">
                   Enter department.
-                 </div>
+                </div>
               </div>
             </div>
           </div>
+          
+
 
 
         </div>
-
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
             <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Back</button>
