--- a/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row p-2">
-    
+
     <!-- <div class="row p-2">
-      <div class="col">
-        <h4 class="page-title"><a ><i class="bi bi-house-door"></i></a></h4>
-      </div>
-    </div> -->
+    <div class="col">
+      <h4 class="page-title"><a ><i class="bi bi-house-door"></i></a></h4>
+    </div>
+  </div> -->
 
     <div class="col col-lg-3">
       <div class="card" (click)="userRole!= 'adminrole' && navigateTo('assigned')">
@@ -21,13 +21,13 @@
     </div>
 
     <!-- <div class="col col-lg-3">
-      <div class="card" (click)="navigateTo('dashboard')">
-        <div class="card-body">
-          <i class="fa fa-chart-pie"></i>
-          <h5 class="card-title">Dashboard</h5>
-        </div>
+    <div class="card" (click)="navigateTo('dashboard')">
+      <div class="card-body">
+        <i class="fa fa-chart-pie"></i>
+        <h5 class="card-title">Dashboard</h5>
       </div>
-    </div> -->
+    </div>
+  </div> -->
 
     <div class="col col-lg-3">
       <div class="card" (click)="userRole != 'adminrole' && navigateTo('document-master')">
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    
+
 
     <div class="col col-lg-3">
       <div class="card" (click)="userRole != 'adminrole' && navigateTo('document-manager')">
@@ -50,19 +50,28 @@
     </div>
 
     <!-- <div class="col col-lg-3">
-      <div class="card" (click)="navigateTo('document-types')">
-        <div class="card-body">
-          <i class="fa-solid fa-database"></i>
-          <h5 class="card-title">Document Repository</h5>
-        </div>
+    <div class="card" (click)="navigateTo('document-types')">
+      <div class="card-body">
+        <i class="fa-solid fa-database"></i>
+        <h5 class="card-title">Document Repository</h5>
       </div>
-    </div> -->
+    </div>
+  </div> -->
 
     <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('admin')">
         <div class="card-body">
           <i class="fa-solid fa-users-gear"></i>
           <h5 class="card-title">Admin Management</h5>
+        </div>
+      </div>
+    </div>
+
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('reports')">
+        <div class="card-body">
+          <i class="fa-solid fa-users-gear"></i>
+          <h5 class="card-title">Reports</h5>
         </div>
       </div>
     </div>
