--- a/VlimsApp/ClientApp/src/app/modules/reports/documenstindex/documentsindex.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/reports/documenstindex/documentsindex.component.html
@@ -1,10 +1,138 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+<div class="container-fluid">
+  <div class="row p-2">
+    <div class="col">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="page-title flex-grow-1">Documents Index</h4>
 
-</body>
-</html>
+        <div class="back-icon" style="margin-right: 10px;">
+          <a href="javascript:void(0);" onclick="history.back();">
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
+        </div>
+
+        <div class="d-flex page-title-actions">
+          <div class="input-group custom-input-group">
+            <!-- Magnifying glass icon -->
+            <span class="input-group-text custom-input-group-text">
+              <i class="fas fa-search custom-search-icon"></i>
+            </span>
+            <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search" maxlength="249">
+          </div>
+
+          <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row p-2">
+    <div class="col">
+      <div class="p-4 bg-white shadow-dark rounded-2">
+        <p-table #templatesTable [value]="documents.exisitingDocuments"
+                 [globalFilterFields]="['documentNo','documentType','documentName']"
+                 tableStyleClass="table table-striped" [rows]="itemsPerPage"
+                 [paginator]="true" [totalRecords]="documents.totalRecords"
+                 [rowsPerPageOptions]="rowsPerPageOptions">
+          <ng-template pTemplate="header">
+            <tr>
+
+              <ng-container *ngFor="let col of exportColumns">
+                {{col.header}}
+                <th pSortableColumn="col.dataKey" style="width:10%">{{col.title}}<p-sortIcon field="col.dataKey"></p-sortIcon></th>
+              </ng-container>
+              <!--<th>S.No</th>
+              <th pSortableColumn="documentNo" style="width:10%">Document No. <p-sortIcon field="documentNo"></p-sortIcon></th>
+              <th pSortableColumn="documentName" style="width:10%">Document Name<p-sortIcon field="documentName"></p-sortIcon></th>
+              <th pSortableColumn="documentType" style="width:10%">Document Type<p-sortIcon field="documentType"></p-sortIcon></th>
+              <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
+              <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
+              <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>-->
+            
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
+            <tr>
+              <!--<td>{{ i + 1 }}</td>-->
+              <!-- <td>{{existingdoc?.edrId}}</td> -->
+              <td>{{existingdoc?.documentNo}}</td>
+              <td>{{existingdoc?.documentName}}</td>
+              <td>{{existingdoc?.documentType}}</td>
+              <td>{{existingdoc?.department}}</td>
+              <td>{{existingdoc?.effectiveDate}}</td>
+              <td>{{existingdoc?.reviewDate}}</td>        
+            </tr>
+          </ng-template>
+        </p-table>
+
+        <div class="d-flex justify-content-center mt-5">
+          <button class="btn btn-primary mx-2 align-items-center m-lg-3" type="button" (click)="exportExcel()">Print to Excel</button>
+          <button class="btn btn-primary mx-2 align-items-center m-lg-3" type="button" (click)="exportPdf()">Print to PDF</button>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+ 
+
+</div>
+
+
+<style>
+  /* Styles for .custom-input-group */
+  .custom-input-group {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  .custom-input-group-text {
+    background: white;
+    border: none;
+    padding: 0;
+    vertical-align: middle;
+  }
+
+  .custom-search-icon {
+    font-size: 14px;
+    margin-right: 5px;
+    margin-left: 9px;
+    color: #555;
+  }
+
+  .custom-input {
+    border: none;
+    padding: 5px;
+    vertical-align: middle;
+    background-color: white;
+    box-shadow: none;
+  }
+</style>
+<!--<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Preview</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+  </div>
+</ng-template>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
