--- a/VlimsApp/ClientApp/src/app/modules/reports/reportsdashboard/reportsdashboard.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/reports/reportsdashboard/reportsdashboard.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid">
+
   <div class="row p-2">
     <div class="col">
       <div class="col d-flex justify-content-between align-items-center">
-        <h4 class="page-title"><a (click)="navigateTo('home')"><i class="bi bi-house-door"></i></a> / Document Manager</h4>            <div class="back-icon" style="margin-right: 10px;">
+        <h4 class="page-title"><a (click)="navigateTo('home')"><i class="bi bi-house-door"></i></a> /Reports</h4>
+        <div class="back-icon" style="margin-right: 10px;">
           <a href="javascript:void(0);" onclick="history.back();">
             <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
           </a>
@@ -13,74 +15,34 @@
   </div>
   <div class="row p-2">
 
-
-
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentRequest">
-      <div class="card" (click)="navigateTo('requests')">
-        <div class="card-body">
+    <!--<div class="col col-lg-3">
+      <div class="card" [routerLink]="['../doctypeindex']">
+        <div class="card-body">-->
           <!-- <i class="fa fa-chart-pie"></i> -->
-          <i class="fa fa-code-pull-request"></i>
-          <h5 class="card-title">Document Request</h5>
+          <!--<i class="fa fa-code-pull-request"></i>
+          <h5 class="card-title">Document Type Index</h5>
         </div>
       </div>
-    </div>
+    </div>-->
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentPreperation">
-      <div class="card" (click)="navigateTo('preparations')">
+    <div class="col col-lg-3">
+      <div class="card" [routerLink]="['../docindex']">
         <div class="card-body">
           <i class="fa fa-pen-ruler"></i>
-          <h5 class="card-title">Document Preparation</h5>
-        </div>
-      </div>
-    </div>
-
-
-
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentEffective">
-      <div class="card" (click)="navigateTo('effectives')">
-        <div class="card-body">
-          <i class="fa fa-square-poll-vertical"></i>
-          <h5 class="card-title">Document Effective</h5>
+          <h5 class="card-title">Documents Index</h5>
         </div>
       </div>
     </div>
 
     <!--<div class="col col-lg-3">
-      <div class="card" (click)="navigateTo('document-revision')">
+      <div class="card" [routerLink]="['../docprintindex']">
         <div class="card-body">
-          <i class="fa fa-cash-register"></i>
-          <h5 class="card-title">Document Revision</h5>
+          <i class="fa fa-square-poll-vertical"></i>
+          <h5 class="card-title">Document Print List</h5>
         </div>
       </div>
     </div>-->
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.downloadPrint">
-      <div class="card" (click)="navigateTo('document-print')">
-        <div class="card-body">
-          <i class="fa fa-print"></i>
-          <h5 class="card-title">Document Print</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.docrepository">
-      <div class="card" (click)="navigateTo('existing-document-requests')">
-        <div class="card-body">
-          <i class="fa fa-print"></i>
-          <h5 class="card-title">Existing Document Request</h5>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.docrepository">
-      <div class="card" (click)="navigateTo('existingdocuments')">
-        <div class="card-body">
-          <i class="fa fa-print"></i>
-          <h5 class="card-title">Documents Repository</h5>
-        </div>
-      </div>
-    </div>
-
   </div>
+
 </div>
